--- a/README.html
+++ b/README.html
@@ -102,7 +102,7 @@
 ;" data-marpit-pagination-total="8">
 <header><strong>Enis Spahi</strong></header>
 <h1 id="demo-2-ai-capable-recipes-search">Demo (2): AI Capable Recipes Search</h1>
-<p><a href="https://github.com/enisspahi/pact-messaging">Pact Messaging example</a></p>
+<p><a href="https://github.com/enisspahi/recipes-with-langchain4j">recipes-with-langchain4j</a></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
   font-size: 30px;
