--- a/README.html
+++ b/README.html
@@ -17,20 +17,18 @@
 ;">
 <header><strong>Enis Spahi</strong></header>
 
-<h2 id="langchain4j">LangChain4j</h2>
+<h1 id="langchain4j">LangChain4j</h1>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-marpit-fragments="1" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
   font-size: 30px;
 }
 " lang="en-US" data-marpit-pagination="2" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
   font-size: 30px;
 }
-;" data-marpit-pagination-total="8">
+;" data-marpit-pagination-total="7">
 <header><strong>Enis Spahi</strong></header>
 <h2 id="safe-harbour-statement">Safe Harbour Statement</h2>
-<ul>
-<li data-marpit-fragment="1">All what you will hear can be different, this presentation is for motivational purposes ...</li>
-</ul>
+<p>All what you will hear can be different, this presentation is for motivational purposes ...</p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
   font-size: 30px;
@@ -38,33 +36,22 @@
 " lang="en-US" data-marpit-pagination="3" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
   font-size: 30px;
 }
-;" data-marpit-pagination-total="8">
+;" data-marpit-pagination-total="7">
 <header><strong>Enis Spahi</strong></header>
-<h2 id="safe-harbour-statement-1">Safe Harbour Statement</h2>
-<p>All what you will hear can be different, this presentation is for motivational purposes ...</p>
+<h2 id="safe-harbour-statement-2">Safe Harbour Statement (2)</h2>
+<p>This presentation is out of curiosity and non-deterministic</p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-marpit-fragments="10" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
   font-size: 30px;
 }
 " lang="en-US" data-marpit-pagination="4" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
   font-size: 30px;
 }
-;" data-marpit-pagination-total="8">
-<header><strong>Enis Spahi</strong></header>
-<h2 id="safe-harbour-statement-2">Safe Harbour Statement (2)</h2>
-<p>This presentation is out of curiosity</p>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-marpit-fragments="10" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
-  font-size: 30px;
-}
-" lang="en-US" data-marpit-pagination="5" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
-  font-size: 30px;
-}
-;" data-marpit-pagination-total="8">
+;" data-marpit-pagination-total="7">
 <header><strong>Enis Spahi</strong></header>
 <h2 id="what-is-langchain4j">What is LangChain4j?</h2>
 <ul>
-<li data-marpit-fragment="1">LLMs providers (OpenAI, Google Vertex AI Gemini, etc) provide APIs</li>
+<li data-marpit-fragment="1">LLMs (OpenAI, Google Vertex AI Gemini, etc) provide APIs</li>
 <li data-marpit-fragment="2">LangChain4j offers a unified API to integrate LLMs into Java applications</li>
 <li data-marpit-fragment="3">Interesting features
 <ul>
@@ -82,16 +69,27 @@
 </li>
 </ul>
 </section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
+  font-size: 30px;
+}
+" lang="en-US" data-marpit-pagination="5" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
+  font-size: 30px;
+}
+;" data-marpit-pagination-total="7">
+<header><strong>Enis Spahi</strong></header>
+<h1 id="demo-1-examples">Demo (1): Examples</h1>
+<p><a href="https://github.com/langchain4j/langchain4j-examples">langchain4j-examples</a></p>
+</section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
   font-size: 30px;
 }
 " lang="en-US" data-marpit-pagination="6" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
   font-size: 30px;
 }
-;" data-marpit-pagination-total="8">
+;" data-marpit-pagination-total="7">
 <header><strong>Enis Spahi</strong></header>
-<h1 id="demo-1-examples">Demo (1): Examples</h1>
-<p><a href="https://github.com/langchain4j/langchain4j-examples">langchain4j-examples</a></p>
+<h1 id="demo-2-recipes-search-with-ai">Demo (2): Recipes Search with AI</h1>
+<p><a href="https://github.com/enisspahi/recipes-with-langchain4j">recipes-with-langchain4j</a></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
   font-size: 30px;
@@ -99,18 +97,7 @@
 " lang="en-US" data-marpit-pagination="7" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
   font-size: 30px;
 }
-;" data-marpit-pagination-total="8">
-<header><strong>Enis Spahi</strong></header>
-<h1 id="demo-2-ai-capable-recipes-search">Demo (2): AI Capable Recipes Search</h1>
-<p><a href="https://github.com/enisspahi/recipes-with-langchain4j">recipes-with-langchain4j</a></p>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-paginate="true" data-header="**Enis Spahi**" data-theme="uncover" data-style="section {
-  font-size: 30px;
-}
-" lang="en-US" data-marpit-pagination="8" style="--paginate:true;--header:**Enis Spahi**;--theme:uncover;--style:section {
-  font-size: 30px;
-}
-;" data-marpit-pagination-total="8">
+;" data-marpit-pagination-total="7">
 <header><strong>Enis Spahi</strong></header>
 <h1 id="references">References</h1>
 <ul>
