--- a/README.html
+++ b/README.html
@@ -52,8 +52,8 @@
 <h2 id="what-is-langchain4j">What is LangChain4j?</h2>
 <ul>
 <li data-marpit-fragment="1">LLMs (OpenAI, Google Vertex AI Gemini, etc) provide APIs</li>
-<li data-marpit-fragment="2">LangChain4j offers a unified API to integrate LLMs into Java applications</li>
-<li data-marpit-fragment="3">Interesting features
+<li data-marpit-fragment="2">LangChain4j offers a unified abstraction for Java</li>
+<li data-marpit-fragment="3">Some interesting features
 <ul>
 <li data-marpit-fragment="4">Chat and language models</li>
 <li data-marpit-fragment="5">Tools (Function calling)</li>
